--- a/index.html
+++ b/index.html
@@ -18,11 +18,39 @@
 }
 
 body{
-  background:#0f1113;
-  color:#d6d6d6;
+  background:#0e0f10;
+  color:#d4d4d4;
+  overflow-x:hidden;
+}
+
+/* ================= LOADER ================= */
+.loader{
+  position:fixed;
+  inset:0;
+  background:#0e0f10;
   display:flex;
-  flex-direction:column;
-  min-height:100vh;
+  justify-content:center;
+  align-items:center;
+  z-index:9999;
+  transition:opacity .8s ease, visibility .8s ease;
+}
+
+.loader.hidden{
+  opacity:0;
+  visibility:hidden;
+}
+
+.loader-line{
+  width:120px;
+  height:1px;
+  background:#3a86ff;
+  animation:loading 1.5s ease-in-out infinite;
+}
+
+@keyframes loading{
+  0%{transform:scaleX(0);}
+  50%{transform:scaleX(1);}
+  100%{transform:scaleX(0);}
 }
 
 /* ================= HEADER ================= */
@@ -31,8 +59,9 @@ header{
   top:0;
   width:100%;
   height:70px;
-  background:#14171a;
-  border-bottom:1px solid #1f2327;
+  background:rgba(14,15,16,0.95);
+  backdrop-filter:blur(10px);
+  border-bottom:1px solid #1c1f22;
   z-index:100;
 }
 
@@ -49,24 +78,24 @@ header{
 .logo{
   font-weight:600;
   font-size:14px;
-  letter-spacing:.08em;
-  color:#ffffff;
+  letter-spacing:.15em;
+  color:#fff;
 }
 
+/* ================= NAV ================= */
 nav ul{
   display:flex;
-  gap:36px;
+  gap:40px;
   list-style:none;
 }
 
 nav li{
-  font-size:12px;
-  letter-spacing:.12em;
+  font-size:11px;
+  letter-spacing:.15em;
   text-transform:uppercase;
   cursor:pointer;
-  color:#999;
-  position:relative;
-  transition:.3s;
+  color:#777;
+  transition:.4s;
 }
 
 nav li:hover,
@@ -74,49 +103,40 @@ nav li.active{
   color:#fff;
 }
 
-nav li::after{
-  content:"";
-  position:absolute;
-  bottom:-6px;
-  left:0;
-  width:0;
-  height:2px;
-  background:#3a86ff;
-  transition:.3s;
-}
-
-nav li:hover::after{
-  width:100%;
-}
-
-.lang{
-  display:flex;
-  gap:6px;
-}
-
+/* ================= LANGUAGE ================= */
 .lang button{
-  background:transparent;
-  border:1px solid #444;
-  color:#888;
-  font-size:10px;
-  padding:4px 8px;
+  background:none;
+  border:none;
+  color:#666;
+  font-size:11px;
+  letter-spacing:.1em;
   cursor:pointer;
   transition:.3s;
 }
 
 .lang button.active{
-  border-color:#3a86ff;
   color:#fff;
 }
 
-/* ================= LAYOUT ================= */
+/* ================= SECTIONS ================= */
 main{
   padding-top:70px;
-  flex-grow:1;
 }
 
-section{display:none}
-section.active{display:block}
+section{
+  opacity:0;
+  transform:translateY(40px);
+  transition:opacity .8s ease, transform .8s ease;
+  min-height:100vh;
+  display:none;
+}
+
+section.active{
+  display:flex;
+  align-items:center;
+  opacity:1;
+  transform:translateY(0);
+}
 
 .container{
   width:90%;
@@ -124,51 +144,37 @@ section.active{display:block}
   margin:auto;
 }
 
-.spaced{
-  padding:100px 0;
-}
-
 /* ================= TYPO ================= */
 h1{
-  font-size:36px;
+  font-size:42px;
   font-weight:600;
   margin-bottom:20px;
   color:#fff;
-}
-
-h2{
-  font-size:18px;
-  margin-bottom:10px;
-  color:#fff;
+  letter-spacing:-0.02em;
 }
 
 p{
-  font-size:15px;
-  line-height:1.7;
-  color:#b5b5b5;
+  font-size:16px;
+  line-height:1.8;
+  color:#aaa;
+  max-width:700px;
 }
 
-/* ================= HERO ================= */
-.hero{
-  min-height:80vh;
-  display:flex;
-  align-items:center;
-}
-
+/* ================= BUTTONS ================= */
 .hero-cta{
-  margin-top:30px;
+  margin-top:40px;
   display:flex;
-  gap:16px;
+  gap:20px;
 }
 
 .btn{
-  padding:14px 28px;
-  font-size:12px;
+  padding:14px 30px;
+  font-size:11px;
+  letter-spacing:.15em;
   text-transform:uppercase;
-  letter-spacing:.1em;
   text-decoration:none;
   cursor:pointer;
-  transition:.3s;
+  transition:.4s ease;
 }
 
 .primary{
@@ -181,8 +187,8 @@ p{
 }
 
 .secondary{
-  border:1px solid #444;
-  color:#ccc;
+  border:1px solid #333;
+  color:#aaa;
 }
 
 .secondary:hover{
@@ -192,70 +198,44 @@ p{
 
 /* ================= CV ================= */
 .cv-block{
-  border-left:3px solid #3a86ff;
+  border-left:2px solid #3a86ff;
   padding-left:20px;
-  margin-bottom:40px;
-}
-
-.cv-download-btn{
-  display:inline-block;
   margin-top:30px;
-  padding:14px 24px;
-  background:#3a86ff;
-  color:#fff;
-  text-decoration:none;
-  text-transform:uppercase;
-  font-size:12px;
-  letter-spacing:.1em;
-}
-
-/* ================= PORTFOLIO ================= */
-.portfolio-grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:40px;
-}
-
-.portfolio-item{
-  border:1px solid #1f2327;
-  padding:20px;
-  transition:.3s;
-}
-
-.portfolio-item:hover{
-  border-color:#3a86ff;
-  transform:translateY(-5px);
-}
-
-.portfolio-item img{
-  width:100%;
-  margin-bottom:15px;
 }
 
 /* ================= FOOTER ================= */
 footer{
   text-align:center;
-  padding:20px;
+  padding:40px 0;
   font-size:11px;
-  color:#777;
-  border-top:1px solid #1f2327;
-  margin-top:60px;
+  letter-spacing:.1em;
+  color:#666;
+  border-top:1px solid #1c1f22;
+}
+
+/* ================= SMOOTH TRANSITIONS ================= */
+html{
+  scroll-behavior:smooth;
 }
 
 </style>
 </head>
 <body>
 
+<!-- LOADER -->
+<div class="loader">
+  <div class="loader-line"></div>
+</div>
+
 <header>
   <div class="nav">
-    <div class="logo">MB · Industrial Design</div>
+    <div class="logo">MB · INDUSTRIAL DESIGN</div>
 
     <nav>
       <ul>
         <li class="tab active" data-tab="home">Inicio</li>
         <li class="tab" data-tab="about">Sobre mí</li>
         <li class="tab" data-tab="cv">Currículum</li>
-        <li class="tab" data-tab="portfolio">Portfolio</li>
         <li class="tab" data-tab="contact">Contacto</li>
       </ul>
     </nav>
@@ -270,109 +250,113 @@ footer{
 <main>
 
 <section id="home" class="active">
-  <div class="container hero">
-    <div>
-      <h1 id="hero-title">Industrial Design Portfolio</h1>
-      <p id="hero-sub">Diseño estratégico, técnico y funcional enfocado en productos sólidos.</p>
+  <div class="container">
+    <h1 id="hero-title">Industrial Design Portfolio</h1>
+    <p id="hero-sub">
+      Diseño técnico, estratégico y estructural enfocado en productos sólidos,
+      precisos y funcionales.
+    </p>
 
-      <div class="hero-cta">
-        <a class="btn primary tab" data-tab="cv">Ver CV</a>
-        <a class="btn secondary tab" data-tab="contact">Contactar</a>
-      </div>
+    <div class="hero-cta">
+      <a class="btn primary tab" data-tab="cv">Ver CV</a>
+      <a class="btn secondary tab" data-tab="contact">Contactar</a>
     </div>
   </div>
 </section>
 
 <section id="about">
-  <div class="container spaced">
+  <div class="container">
     <h1 id="about-title">Sobre mí</h1>
     <p id="about-text">
-      Diseñador industrial con enfoque técnico y estructural. Combino ingeniería, procesos de fabricación y pensamiento estratégico para desarrollar productos funcionales y eficientes.
+      Diseñador industrial con mentalidad estructural y enfoque técnico.
+      Combino ingeniería, fabricación y pensamiento estratégico para desarrollar
+      productos funcionales y coherentes.
     </p>
   </div>
 </section>
 
 <section id="cv">
-  <div class="container spaced">
-    <h1 id="cv-title">Currículum</h1>
+  <div class="container">
+    <h1>Currículum</h1>
 
     <div class="cv-block">
-      <h2 id="cv-edu-title">Grado en Ingeniería de Diseño Industrial</h2>
-      <p id="cv-edu-text">Formación interdisciplinar en diseño de producto y procesos industriales.</p>
+      <h2>Ingeniería en Diseño Industrial</h2>
+      <p>Formación interdisciplinar en desarrollo de producto y procesos industriales.</p>
     </div>
 
     <div class="cv-block">
-      <h2 id="cv-exp-title">Experiencia profesional</h2>
-      <p id="cv-exp-text">Desarrollo de mobiliario y optimización técnica en entorno profesional.</p>
+      <h2>Experiencia profesional</h2>
+      <p>Desarrollo técnico, optimización estructural y colaboración multidisciplinar.</p>
     </div>
-
-    <a href="curriculum.pdf" class="cv-download-btn" id="cv-download">Descargar CV</a>
-  </div>
-</section>
-
-<section id="portfolio">
-  <div class="container spaced">
-    <h1 id="portfolio-title">Portfolio</h1>
   </div>
 </section>
 
 <section id="contact">
-  <div class="container spaced">
+  <div class="container">
     <h1 id="contact-title">Contacto</h1>
-    <p>📧 majorbori@gmail.com</p>
-    <p>📞 +36 30 820 3716</p>
+    <p>majorbori@gmail.com</p>
   </div>
 </section>
 
 </main>
 
-<footer id="footer-text">
+<footer>
 © 2026 · Industrial Design Engineer
 </footer>
 
 <script>
 
-/* ================= NAVIGATION ================= */
+/* ================= LOADER ================= */
+window.addEventListener("load",()=>{
+  setTimeout(()=>{
+    document.querySelector(".loader").classList.add("hidden");
+  },800);
+});
+
+/* ================= TRANSICIÓN SUAVE ENTRE SECCIONES ================= */
 document.querySelectorAll(".tab").forEach(tab=>{
   tab.addEventListener("click",()=>{
-    document.querySelectorAll("section").forEach(s=>s.classList.remove("active"));
-    document.getElementById(tab.dataset.tab).classList.add("active");
+
+    const current = document.querySelector("section.active");
+    const next = document.getElementById(tab.dataset.tab);
+
+    if(!next) return;
+
+    current.classList.remove("active");
+
+    setTimeout(()=>{
+      next.classList.add("active");
+    },200);
 
     document.querySelectorAll("nav li").forEach(li=>li.classList.remove("active"));
     if(tab.tagName==="LI") tab.classList.add("active");
-
-    if(tab.dataset.tab==="cv" && tab.classList.contains("primary")){
-      setTimeout(()=>{
-        document.getElementById("cv-download").scrollIntoView({behavior:"smooth"});
-      },400);
-    }
   });
 });
 
-/* ================= MULTILANGUAGE ================= */
-const content = {
+/* ================= MULTILANG ================= */
+const content={
   es:{
-    nav:["Inicio","Sobre mí","Currículum","Portfolio","Contacto"],
-    heroTitle:"Industrial Design Portfolio",
-    heroSub:"Diseño estratégico, técnico y funcional enfocado en productos sólidos.",
+    nav:["Inicio","Sobre mí","Currículum","Contacto"],
+    hero:"Industrial Design Portfolio",
+    sub:"Diseño técnico, estratégico y estructural enfocado en productos sólidos, precisos y funcionales.",
     about:"Sobre mí",
     contact:"Contacto"
   },
   en:{
-    nav:["Home","About","Curriculum","Portfolio","Contact"],
-    heroTitle:"Industrial Design Portfolio",
-    heroSub:"Strategic and technical design focused on solid products.",
+    nav:["Home","About","Curriculum","Contact"],
+    hero:"Industrial Design Portfolio",
+    sub:"Technical and strategic design focused on precise and solid products.",
     about:"About",
     contact:"Contact"
   }
 };
 
 function setLang(lang){
-  const c = content[lang];
+  const c=content[lang];
 
   document.querySelectorAll("nav li").forEach((li,i)=>li.innerText=c.nav[i]);
-  document.getElementById("hero-title").innerText=c.heroTitle;
-  document.getElementById("hero-sub").innerText=c.heroSub;
+  document.getElementById("hero-title").innerText=c.hero;
+  document.getElementById("hero-sub").innerText=c.sub;
   document.getElementById("about-title").innerText=c.about;
   document.getElementById("contact-title").innerText=c.contact;
 
