--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>MB · Industrial Design</title>
+<title>MB — Industrial Design</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -18,9 +18,9 @@
 }
 
 body{
-  background:#0d0d0d;
+  background:#0b0b0b;
   color:#eaeaea;
-  overflow:hidden;
+  overflow-x:hidden;
   cursor:none;
 }
 
@@ -29,8 +29,9 @@ body::before{
   content:"";
   position:fixed;
   inset:0;
-  background:url("https://grainy-gradients.vercel.app/noise.svg");
-  opacity:.05;
+  background:radial-gradient(rgba(255,255,255,0.03) 1px, transparent 1px);
+  background-size:3px 3px;
+  opacity:.2;
   pointer-events:none;
   z-index:999;
 }
@@ -38,13 +39,13 @@ body::before{
 /* ================= CUSTOM CURSOR ================= */
 .cursor{
   position:fixed;
-  width:12px;
-  height:12px;
+  width:14px;
+  height:14px;
   border:1px solid #fff;
   border-radius:50%;
   pointer-events:none;
   transform:translate(-50%,-50%);
-  transition:transform .15s ease, background .3s ease;
+  transition:transform .2s ease, background .3s ease;
   z-index:1000;
 }
 
@@ -53,160 +54,122 @@ body::before{
   background:#fff;
 }
 
-/* ================= LOADER FADE ================= */
-.loader{
-  position:fixed;
-  inset:0;
-  background:#000;
-  z-index:2000;
-  transition:opacity 1s ease;
-}
-
-.loader.hidden{
-  opacity:0;
-  pointer-events:none;
-}
-
-/* ================= HEADER ================= */
-header{
-  position:fixed;
-  width:100%;
-  top:0;
-  height:80px;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  z-index:100;
-}
-
-nav{
-  display:flex;
-  gap:60px;
-}
-
-nav span{
-  font-size:11px;
-  letter-spacing:.3em;
-  text-transform:uppercase;
-  color:#555;
-  cursor:pointer;
-  transition:.4s;
-}
-
-nav span:hover{
-  color:#fff;
-}
-
-/* ================= FULLSCREEN SECTIONS ================= */
+/* ================= SECTIONS ================= */
 .section{
-  height:100vh;
-  width:100%;
+  min-height:100vh;
   display:flex;
-  justify-content:center;
   align-items:center;
-  text-align:center;
-  position:absolute;
-  inset:0;
-  opacity:0;
-  transition:opacity 1.2s ease;
-}
-
-.section.active{
-  opacity:1;
-  z-index:1;
+  justify-content:center;
+  padding:0 10%;
+  position:relative;
 }
 
 /* ================= TYPO ================= */
 h1{
-  font-size:64px;
+  font-size:clamp(48px,6vw,80px);
   font-weight:500;
-  letter-spacing:-0.02em;
+  line-height:1.1;
 }
 
 p{
   font-size:18px;
-  color:#aaa;
+  color:#999;
   margin-top:30px;
   max-width:700px;
 }
 
-/* ================= FADE TO BLACK ================= */
-.fade{
-  position:fixed;
-  inset:0;
-  background:#000;
-  pointer-events:none;
+/* ================= SCROLL ANIMATION ================= */
+.reveal{
   opacity:0;
-  transition:opacity .6s ease;
-  z-index:1500;
+  transform:translateY(80px);
+  transition:1.4s cubic-bezier(.2,.7,.1,1);
 }
 
-.fade.active{
+.reveal.visible{
   opacity:1;
+  transform:translateY(0);
+}
+
+/* ================= PARALLAX IMAGE ================= */
+.parallax{
+  position:absolute;
+  width:60%;
+  height:60%;
+  background:#111;
+  top:20%;
+  right:10%;
+  z-index:-1;
+  transform:translateY(0);
+  transition:transform .2s ease-out;
+  filter:grayscale(100%) contrast(110%);
+}
+
+/* ================= FADE IN HERO ================= */
+.hero{
+  text-align:center;
+}
+
+.hero h1{
+  animation:fadeUp 1.8s ease forwards;
+}
+
+@keyframes fadeUp{
+  from{opacity:0; transform:translateY(40px);}
+  to{opacity:1; transform:translateY(0);}
+}
+
+footer{
+  text-align:center;
+  padding:80px 0;
+  font-size:12px;
+  color:#555;
+  letter-spacing:.2em;
+  border-top:1px solid #1c1c1c;
 }
 
 </style>
 </head>
 <body>
 
-<div class="loader"></div>
-<div class="fade"></div>
 <div class="cursor"></div>
 
-<header>
-  <nav>
-    <span data-target="home">Home</span>
-    <span data-target="about">About</span>
-    <span data-target="contact">Contact</span>
-  </nav>
-</header>
-
-<!-- SECTIONS -->
-
-<div id="home" class="section active">
+<!-- HERO -->
+<section class="section hero">
   <div>
-    <h1 id="typeText"></h1>
-    <p>Precision. Material. Silence.</p>
-  </div>
-</div>
-
-<div id="about" class="section">
-  <div>
-    <h1>Industrial Design Studio</h1>
-    <p>
-      Conceptual development, structural clarity,
-      architectural discipline applied to product design.
+    <h1>Industrial Design</h1>
+    <p class="reveal">
+      Precision, material intelligence, structural clarity.
     </p>
   </div>
-</div>
+</section>
 
-<div id="contact" class="section">
+<!-- ABOUT -->
+<section class="section">
   <div>
-    <h1>Contact</h1>
-    <p>majorbori@gmail.com</p>
+    <h1 class="reveal">Architectural Approach</h1>
+    <p class="reveal">
+      We design products with spatial awareness, engineering discipline
+      and silent confidence.
+    </p>
   </div>
-</div>
+  <div class="parallax"></div>
+</section>
+
+<!-- PHILOSOPHY -->
+<section class="section">
+  <div>
+    <h1 class="reveal">Material. Silence. Function.</h1>
+    <p class="reveal">
+      Minimalism is not aesthetic reduction — it is structural necessity.
+    </p>
+  </div>
+</section>
+
+<footer>
+MB STUDIO — INDUSTRIAL DESIGN
+</footer>
 
 <script>
-
-/* ================= LOADER ================= */
-window.addEventListener("load",()=>{
-  setTimeout(()=>{
-    document.querySelector(".loader").classList.add("hidden");
-  },1000);
-});
-
-/* ================= TYPEWRITER ================= */
-const text="Industrial Design";
-let i=0;
-function type(){
-  if(i<text.length){
-    document.getElementById("typeText").innerHTML+=text.charAt(i);
-    i++;
-    setTimeout(type,70);
-  }
-}
-type();
 
 /* ================= CUSTOM CURSOR ================= */
 const cursor=document.querySelector(".cursor");
@@ -215,29 +178,33 @@ document.addEventListener("mousemove",e=>{
   cursor.style.top=e.clientY+"px";
 });
 
-document.querySelectorAll("span").forEach(el=>{
+/* Expand on links */
+document.querySelectorAll("h1, p").forEach(el=>{
   el.addEventListener("mouseenter",()=>cursor.classList.add("expand"));
   el.addEventListener("mouseleave",()=>cursor.classList.remove("expand"));
 });
 
-/* ================= FADE TRANSITION ================= */
-const fade=document.querySelector(".fade");
+/* ================= SCROLL REVEAL ================= */
+const reveals=document.querySelectorAll(".reveal");
 
-document.querySelectorAll("nav span").forEach(btn=>{
-  btn.addEventListener("click",()=>{
-    const target=document.getElementById(btn.dataset.target);
-    const current=document.querySelector(".section.active");
-
-    if(target===current) return;
-
-    fade.classList.add("active");
-
-    setTimeout(()=>{
-      current.classList.remove("active");
-      target.classList.add("active");
-      fade.classList.remove("active");
-    },600);
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.classList.add("visible");
+    }
   });
+},{threshold:0.2});
+
+reveals.forEach(el=>observer.observe(el));
+
+/* ================= PARALLAX ================= */
+const parallax=document.querySelector(".parallax");
+
+window.addEventListener("scroll",()=>{
+  const scrollY=window.scrollY;
+  if(parallax){
+    parallax.style.transform=`translateY(${scrollY * 0.2}px)`;
+  }
 });
 
 </script>
